--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  url_launcher:
+  http:
+  shared_preferences:
+  dynamic_theme:
+  pie_chart:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
